# django-nanoid-field

./: CODE_OF_CONDUCT.md  LICENCE  README.md  pyproject.toml
nanoid_field/: __init__.py  fields.py
test_project/: settings.py
test_project/app/: apps.py  models.py  tests.py
test_project/app/migrations/: 0001_initial.py
