[project]
name = "django-nanoid-field"
version = "0.1.0"
license = { text = "MIT" }
authors = [{ name = "Gokhan Ozturk", email = "me@gokhan.org.tr" }]
description = "Next generation NanoID in Django Model IDs"
readme = "README.md"
dependencies = ["nanoid", "django>=2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanoid_field"]
